--- a/slr-renting/pom.xml
+++ b/slr-renting/pom.xml
@@ -54,7 +54,7 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
         <configuration>
-          <mainClass>vista.AppMain</mainClass>
+          <mainClass>test.TestVistas</mainClass>
         </configuration>
       </plugin>
     </plugins>
