--- a/slr-renting/pom.xml
+++ b/slr-renting/pom.xml
@@ -39,6 +39,24 @@
   </dependencies>
 
   <build>
+  <resources>
+        <!-- Copiar recursos normales desde src/main/resources -->
+        <resource>
+            <directory>src/main/resources</directory>
+        </resource>
+
+        <!-- Copiar FXML, CSS, imágenes, etc., desde src/main/java -->
+        <resource>
+            <directory>src/main/java</directory>
+            <includes>
+                <include>**/*.fxml</include>
+                <include>**/*.css</include>
+                <include>**/*.png</include>
+                <include>**/*.jpg</include>
+                <include>**/*.gif</include>
+            </includes>
+        </resource>
+    </resources>
     <plugins>
 
       <!-- Compilador -->
