--- a/slr-renting/pom.xml
+++ b/slr-renting/pom.xml
@@ -35,6 +35,12 @@
       <artifactId>mysql-connector-j</artifactId>
       <version>9.5.0</version>
     </dependency>
+    
+    <dependency>
+    <groupId>org.apache.pdfbox</groupId>
+    <artifactId>pdfbox</artifactId>
+    <version>2.0.30</version>
+    </dependency>
 
   </dependencies>
 
